--- a/config/database.yml
+++ b/config/database.yml
@@ -26,7 +26,7 @@ development:
   database: Database_VOS
 
   # The specified database role being used to connect to postgres.
-  # To create additional roles in postgres see `$ createuser --help`.
+  # To create additional roles in postgres see `$ createuser --urcatches`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
   username: postgres
